// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render columns-top、columns-bottom slot correctly 1`] = `
<div class="r-picker r-area">
  <div class="r-picker__toolbar">
    <button type="button"
            class="r-picker__cancel r-haptics-feedback"
    >
      Cancel
    </button>
    <button type="button"
            class="r-picker__confirm r-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  Top
  <div class="r-picker__columns"
       style="height: 264px;"
  >
    <div class="r-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="r-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
  Bottom
</div>
`;

exports[`should render title slot correctly 1`] = `
<div class="r-picker__toolbar">
  <button type="button"
          class="r-picker__cancel r-haptics-feedback"
  >
    Cancel
  </button>
  Custom Title
  <button type="button"
          class="r-picker__confirm r-haptics-feedback"
  >
    Confirm
  </button>
</div>
`;

exports[`should render two columns when columns-num prop is two 1`] = `
<div class="r-picker r-area">
  <div class="r-picker__toolbar">
    <button type="button"
            class="r-picker__cancel r-haptics-feedback"
    >
      Cancel
    </button>
    <button type="button"
            class="r-picker__confirm r-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div class="r-picker__columns"
       style="height: 264px;"
  >
    <div class="r-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="r-picker-column__wrapper"
      >
        <li role="button"
            style="height: 44px;"
            tabindex="0"
            class="r-picker-column__item r-picker-column__item--selected"
        >
          <div class="r-ellipsis">
            北京市
          </div>
        </li>
        <li role="button"
            style="height: 44px;"
            tabindex="0"
            class="r-picker-column__item"
        >
          <div class="r-ellipsis">
            天津市
          </div>
        </li>
      </ul>
    </div>
    <div class="r-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="r-picker-column__wrapper"
      >
        <li role="button"
            style="height: 44px;"
            tabindex="0"
            class="r-picker-column__item r-picker-column__item--selected"
        >
          <div class="r-ellipsis">
            北京市
          </div>
        </li>
        <li role="button"
            style="height: 44px;"
            tabindex="0"
            class="r-picker-column__item"
        >
          <div class="r-ellipsis">
            县
          </div>
        </li>
      </ul>
    </div>
    <div class="r-picker__mask"
         style="background-size: 100% 110px;"
    >
    </div>
    <div class="r-hairline-unset--top-bottom r-picker__frame"
         style="height: 44px;"
    >
    </div>
  </div>
</div>
`;

exports[`should watch modelValue prop and render correctly 1`] = `
<li role="button"
    style="height: 44px;"
    tabindex="0"
    class="r-picker-column__item r-picker-column__item--selected"
>
  <div class="r-ellipsis">
    北京市
  </div>
</li>
`;

exports[`should watch modelValue prop and render correctly 2`] = `
<li role="button"
    style="height: 44px;"
    tabindex="0"
    class="r-picker-column__item r-picker-column__item--selected"
>
  <div class="r-ellipsis">
    天津市
  </div>
</li>
`;

exports[`should watch modelValue prop and render correctly 3`] = `
<li role="button"
    style="height: 44px;"
    tabindex="0"
    class="r-picker-column__item r-picker-column__item--selected"
>
  <div class="r-ellipsis">
    北京市
  </div>
</li>
`;
